modular layout and structure

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>nikhil-portfolio</title>
+  <meta name="description" content="Nikhil Kumar Shrey's portfolio showcasing projects, skills, and contact information.">
+  <meta name="keywords" content="portfolio, developer, Nikhil Kumar Shrey, projects, skills, contact">
+  <meta name="author" content="Nikhil Kumar Shrey">
+  <title>Nikhil Kumar Shrey - Portfolio</title>
 </head>
 <body>
   <div id="root"></div>
